Added formik basic components

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,50 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+* {
+  background-color: #202429;
+  color: #fff;
+}
+
+label {
+  font-weight: bold;
+  display: flex;
+  margin-bottom: 5px;
+}
+
+input[type='text'],
+input[type='email'] {
+  display: flex;
+  width: 400px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.4287143;
+  color: #2b2b2b;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+button[type='submit'] {
+  color: #f8f8f8;
+  background-color: rgb(5, 9, 255);
+  background-image: none;
+  border: 1px solid rgb(94, 178, 218);border-radius: 4px;
+  height: 30px;
+  width: 60px;
+}
+
+.form-control {
+  margin-bottom: 20px;
+}
+
+.error {
+
+  color: red;
 }
 
 .App-logo {
@@ -32,6 +77,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
